--- a/index.html
+++ b/index.html
@@ -16,26 +16,32 @@
 <nav class="navbar  navbar-inverse fixed-top navbar-expand-lg navbar-dark bg-dark "  >
 	<div class="container-fluid">
 <a href="#" class="navbar-brand"><img src="images/quotes.svg" width="40px" height="40px" class="m-0 p-0" alt="logo"> <span class="lead">"Quotation"</span></a>
-<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+<button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
   <span class="navbar-toggler-icon"></span>
 </button>
-
-<div class="collapse navbar-collapse" id="navbarSupportedContent">
-  <ul class="navbar-nav mr-auto">
+<form class="form-group my-2 d-sm-block d-lg-none ml-0  my-lg-0">
+		<input type="search" name="" value="" class="form-control mr-sm-2" placeholder="Add Friends"
+		aria-label="Search">
+</form>
+<div class="collapse float-right navbar-collapse" id="navbarSupportedContent">
+  <ul class="navbar-nav ml-lg-auto ml-sm-auto ">
     <li class="nav-item active">
       <a href="#" class="nav-link ml-lg-4">Home <span class="sr-only">(current)</span></a>
     </li>
     <li class="nav-item ">
       <a href="#" class="nav-link">Add Posts</a>
     </li>
+		<li class="nav-item">
+        <a href="#" class="nav-link">About Us</a>
+    </li>
     <li class="nav-item dropdown">
-<a href="#" class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown">
+<a href="#" class="nav-link dropdown-toggle mr-lg-4" id="navbarDropdown" role="button" data-toggle="dropdown">
   Settings</a>
     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
       <a href="#" class="dropdown-item">Profile</a>
       <a href="#" class="dropdown-item">Posts</a>
-      <div class="dropdown-divider"></div>
-        <a href="#" class="dropdown-item">Update-logs</a>
+      <div class="dropdown-divider m-0 p-0"></div>
+        <a href="#" style="color:white" class="dropdown-item dropdown-item bg-dark">logout</a>
     </div>
     </li>
 		<li class="nav-item dropdown d-sm-block d-lg-none">
@@ -48,16 +54,8 @@
       <a href="#" class="dropdown-item">Editor's choice</a>
       <a href="#" class="dropdown-item">Joy</a>
     </li>
-    <li class="nav-item">
-        <a href="#" class="nav-link">About Us</a>
-    </li>
   </ul>
-  <form class="form-inline my-2 my-lg-0">
-      <input type="search" name="" value="" class="form-control mr-sm-2" placeholder="Add Friends"
-      aria-label="Search">
-      <button type="submit" name="button" class="btn btn-outline-table-success bg-light">Search</button>
-  </form>
-    <button type="button" name="button" class="btn btn-outline-danger btn-sm" >Logout</button>
+
 </div>
 
 </div>
@@ -386,7 +384,7 @@
         </div>
 				  <div class="col-lg-1 m-0 p-0 d-none"  id="addFriends-card-instead">
 					</div>
-    <div class="col-lg-3 col-sm-4 m-0 p-0" id="addFriends-card">
+    <div class="col-lg-3 col-sm-4 m-0 p-0 d-lg-block d-sm-none" id="addFriends-card">
 					<div class=" sticky-top " style="top:75px;"  >
 						 			<div class="card"  >
 										<div class="col-lg-1 col-sm-1 offset-10">
